# MonitorQT

./: .gitignore  CMakeLists.txt  README.md  build_cmd.txt  main.cpp  mainwindow.cpp  mainwindow.h
application/: ApplicationLayer.cpp  ApplicationLayer.h
application/abstractions/: IRawFrameSource.h
application/caches/: MatrixFrameCache.cpp  MatrixFrameCache.h  TagCache.cpp  TagCache.h
application/configuration/: ConfigurationValidation.cpp  ConfigurationValidation.h  MonitorRuntimeOptions.cpp  MonitorRuntimeOptions.h  RuntimeOptionsStore.cpp  RuntimeOptionsStore.h  TagRuntimeConfiguration.cpp  TagRuntimeConfiguration.h  TrendDiagnosisOptions.cpp  TrendDiagnosisOptions.h
application/dto/: ApplicationDtos.h
application/events/: ApplicationEvents.cpp  ApplicationEvents.h  EventBus.cpp  EventBus.h
application/pipelines/: DataCleanPipeline.cpp  DataCleanPipeline.h
application/queues/: ApplicationQueues.h  BlockingQueue.h
application/runtime/: AcquisitionRuntimeController.cpp  AcquisitionRuntimeController.h  DataSourceHealthMonitor.cpp  DataSourceHealthMonitor.h  MonitoringRuntimeService.cpp  MonitoringRuntimeService.h  PersistenceRuntimeCoordinator.cpp  PersistenceRuntimeCoordinator.h  RuntimeLifecycleCoordinator.cpp  RuntimeLifecycleCoordinator.h
application/services/: AlarmService.cpp  AlarmService.h  ChartDataService.cpp  ChartDataService.h  DashboardService.cpp  DashboardService.h  MeasurementMapAnalysis.cpp  MeasurementMapAnalysis.h  MeasurementMapService.cpp  MeasurementMapService.h  OperationLogService.cpp  OperationLogService.h  QueryServices.cpp  QueryServices.h  RuntimeCommandFacade.cpp  RuntimeCommandFacade.h  RuntimeEventConsumers.cpp  RuntimeEventConsumers.h  RuntimeUiSnapshotProvider.cpp  RuntimeUiSnapshotProvider.h  TagDefinitionCatalog.cpp  TagDefinitionCatalog.h  TagService.cpp  TagService.h  UiSnapshotProvider.cpp  UiSnapshotProvider.h
application/workers/: BatchPersistWorker.h
bootstrap/: ApplicationRuntimeHost.cpp  ApplicationRuntimeHost.h  EventRegistration.cpp  EventRegistration.h  RuntimeComposition.cpp  RuntimeComposition.h  RuntimeCompositionDependencies.cpp  RuntimeCompositionDependencies.h
domain/: DomainLayer.cpp  DomainLayer.h
domain/alarms/: AlarmModels.cpp  AlarmModels.h
domain/common/: DomainCommon.cpp  DomainCommon.h
domain/devices/: DeviceModels.cpp  DeviceModels.h
domain/logs/: LogModels.cpp  LogModels.h
domain/measurements/: MeasurementModels.cpp  MeasurementModels.h
domain/rules/: DomainRules.cpp  DomainRules.h  MatrixStatisticsCalculator.cpp  MatrixStatisticsCalculator.h
domain/tasks/: TaskModels.cpp  TaskModels.h
infrastructure/: InfrastructureLayer.cpp  InfrastructureLayer.h
infrastructure/persistence/: HistoryRetentionService.cpp  HistoryRetentionService.h  PersistenceModels.cpp  PersistenceModels.h  SQLiteAlarmRepository.cpp  SQLiteAlarmRepository.h  SQLiteConfigurationRepository.cpp  SQLiteConfigurationRepository.h  SQLiteHistoryRepository.cpp  SQLiteHistoryRepository.h  SQLiteOperationLogRepository.cpp  SQLiteOperationLogRepository.h  SqliteConnectionFactory.cpp  SqliteConnectionFactory.h  SqliteSchemaMigrations.cpp  SqliteSchemaMigrations.h
mydoc/执行文档/: WPF项目转换为Qt6_Cpp项目执行文档_2026-06-25_12-54-36.md  业务链路闭环后续代码更新执行思路_2026-06-26_10-53-35.md  阶段0_源项目行为冻结与迁移清单.md  阶段10_测试迁移和最终对齐.md  阶段1_Qt工程和组合根基础.md  阶段2_Domain层迁移.md  阶段3_Tag字典和配置模型迁移.md  阶段4_模拟器迁移.md  阶段5_Application数据处理链路迁移.md  阶段6_事件队列和运行时线程迁移.md  阶段7_SQLite仓储和配置持久化迁移.md  阶段8_Qt表现层和页面迁移.md  阶段9_图表热力图和导出迁移.md
mydoc/检查文档/: 7.1数据链路验收检查报告_2026-06-25_22-24-21.md  7.2警报验收检查报告_2026-06-25_22-27-11.md  7.3持久化验收检查报告_2026-06-25_22-30-36.md  7.4_UI验收检查报告_2026-06-25_22-33-32.md  功能修复检查报告_2026-06-25_22-46-16.md
mydoc/设计文档/: 软件UI设计.md
navigation/: NavigationPage.h  NavigationService.cpp  NavigationService.h
pages/: PagePlaceholderWidget.cpp  PagePlaceholderWidget.h
phase0/: SourceBehaviorFreeze.cpp  SourceBehaviorFreeze.h
presentation/: PresentationLayer.cpp  PresentationLayer.h
presentation/export/: CsvExportWriter.cpp  CsvExportWriter.h
presentation/pages/: MonitoringPages.cpp  MonitoringPages.h
shell/: BottomStatusBarWidget.cpp  BottomStatusBarWidget.h  SideNavigationWidget.cpp  SideNavigationWidget.h  TopStatusBarWidget.cpp  TopStatusBarWidget.h
simulator/: SimulatorLayer.cpp  SimulatorLayer.h
simulator/adapters/: SimulatorDataSource.cpp  SimulatorDataSource.h
simulator/generators/: ChannelValueGenerator.cpp  ChannelValueGenerator.h  DeviceStatusGenerator.cpp  DeviceStatusGenerator.h  FakeDataGenerator.cpp  FakeDataGenerator.h  MatrixValueGenerator.cpp  MatrixValueGenerator.h
simulator/models/: SimulationModels.cpp  SimulationModels.h
simulator/noise/: NoiseModels.cpp  NoiseModels.h
simulator/profiles/: DefaultInstrumentProfile.cpp  DefaultInstrumentProfile.h  SimulationProfile.cpp  SimulationProfile.h
simulator/scenarios/: SimulationScenario.cpp  SimulationScenario.h
tests/: MonitorCoreTests.cpp
